[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/ShareTechMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.627451, 0.627451, 0.627451, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.627451 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="InputEventKey" id=21]
scancode = 16777217

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 21 )

[sub_resource type="DynamicFont" id=7]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="BackButton" type="Button" parent="."]
margin_left = 23.0
margin_top = 19.0
margin_right = 161.0
margin_bottom = 88.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
shortcut = SubResource( 10 )
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.5
margin_top = 16.0
margin_right = 141.5
margin_bottom = 90.0
size_flags_horizontal = 3
custom_fonts/mono_font = SubResource( 7 )
custom_fonts/bold_italics_font = SubResource( 7 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 7 )
text = "Settings"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 112.0
margin_right = -24.0
margin_bottom = -24.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 912.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_right = 912.0
margin_bottom = 4.0

[node name="Danger Zone" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 912.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 8 )
text = "Danger Zone"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 912.0
margin_bottom = 83.0
custom_constants/separation = 12

[node name="ResetLP" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 208.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 11 )
text = "Reset Level Progress"

[node name="ResetE" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 388.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 11 )
text = "Reset Everything"

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 912.0
margin_bottom = 91.0

[node name="Dialog" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -720.0

[node name="ResetLPConfirm" type="ConfirmationDialog" parent="Dialog"]
margin_left = 236.0
margin_top = 166.0
margin_right = 437.0
margin_bottom = 236.0
window_title = "Are you sure?"
dialog_text = "Are you ABSOLUTELY sure you want to reset your progress?"

[node name="ResetEConfirm" type="ConfirmationDialog" parent="Dialog"]
margin_left = 236.0
margin_top = 166.0
margin_right = 437.0
margin_bottom = 236.0
window_title = "Are you sure?"
dialog_text = "Are you ABSOLUTELY sure you want to reset everything?!?"

[connection signal="button_down" from="BackButton" to="." method="_on_BackButton_button_down"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/HBoxContainer/ResetLP" to="." method="_on_ResetLP_button_down"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/HBoxContainer/ResetE" to="." method="_on_ResetE_button_down"]
[connection signal="confirmed" from="Dialog/ResetLPConfirm" to="." method="_on_ResetLPConfirm_confirmed"]
[connection signal="confirmed" from="Dialog/ResetEConfirm" to="." method="_on_ResetE_confirmed"]
